# trajectory_analyzer

./: .gitignore  README.md  pyproject.toml
docs/: trajectory_analytics_system_design.md
examples/openhands_trajectories/: fixture_run_1.jsonl  fixture_run_2.jsonl
scripts/: run_eval_analysis.py  run_ray_backbone_demo.py
src/trajectory_analyzer/: __init__.py  adapters.py  catalog.py  context.py  derivation.py  derivation_ops.py  engines.py  operators.py  runtime.py
src/trajectory_analyzer/analysis/: __init__.py  base.py  runner.py
src/trajectory_analyzer/analysis/plugins/: __init__.py  condense_impact.py  eval_metrics.py  perf_metrics.py  token_stats.py
tests/: test_adapters.py  test_catalog.py  test_derivation.py  test_operators.py
