[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectory-analyzer"
version = "0.1.0"
description = "Coding-agent trajectory analytics primitives"
readme = "docs/trajectory_analytics_system_design.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
