[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectory-analyzer"
version = "0.2.0"
description = "Ray-backbone trajectory analytics toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyarrow>=15.0",
]

[project.optional-dependencies]
ray = ["ray[data]>=2.20"]
accelerators = ["duckdb>=1.0", "polars>=1.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
